--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,8 @@ code {
 body {
   background-color: #fff;
   color: #2a2a2a;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
 }
 
@@ -40,4 +40,165 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.px1 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.input-field {
+  margin-top: 4rem;
+}
+.input-field.col input[type='text']:focus {
+  /* border-bottom: 1px solid #aeea00;
+  box-shadow: 0 1px 0 0 #aeea00; */
+}
+
+.input-field.col > label.color.active {
+  /* color: #aeea00; */
+}
+
+.TodoEditor {
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  border: 1px solid #2a2a2a;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+.TodoEditor__textarea {
+  height: calc(16px * 3 + 24px);
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  font: inherit;
+  line-height: 16px;
+  letter-spacing: 0.01em;
+
+  resize: none;
+  margin-bottom: 12px;
+}
+
+.TodoEditor__button {
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: none;
+  width: 100%;
+  margin-left: auto;
+  border-radius: 4px;
+  padding: 12px 24px;
+  background-color: #3f51b5;
+  color: #fff;
+  font-weight: 500;
+}
+
+.TodoEditor__button:hover,
+.TodoEditor__button:focus {
+  background-color: #14ec14;
+}
+
+.TodoEditor__button:active {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.TodoList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-gap: 24px;
+}
+
+.TodoList__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  border: 1px solid #2a2a2a;
+  border-radius: 4px;
+}
+
+.TodoList__item::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+
+  background-color: #26a69a;
+
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.TodoList__item--completed::before {
+  transform: scaleX(1);
+}
+
+.TodoList__text {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 24px;
+  margin-left: 24px;
+}
+
+.TodoList__item--completed .TodoList__text {
+  text-decoration: line-through;
+}
+
+#TodoList__checkbox {
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+}
+
+.TodoList__btn {
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: none;
+
+  margin-left: auto;
+  border-radius: 4px;
+  padding: 12px 24px;
+  background-color: #aeea00;
+  color: #fff;
+  font-weight: 500;
+}
+
+.TodoList__btn:hover,
+.TodoList__btn:focus {
+  background-color: #26a69a;
+}
+
+.TodoList__btn:active {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.todoItem {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  border: 1px solid #2a2a2a;
+  border-radius: 4px;
+}
+.todoItem label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  cursor: pointer;
+}
+
+.todoItem.completed span {
+  text-decoration: line-through;
 }
