--- a/src/index.css
+++ b/src/index.css
@@ -178,7 +178,9 @@ img {
 .TodoList__btn:focus {
   background-color: #26a69a;
 }
-
+.activeLink {
+  color: #26a69a;
+}
 .TodoList__btn:active {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
